<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<packaging>pom</packaging>

	<groupId>me.szumielxd</groupId>
	<artifactId>portfelx-parent</artifactId>
	<version>${revision}</version>
	<url>https://github.com/szumielxd/PortfelX/</url>
	<name>${pluginName}</name>
	<description>Plugin do zarzadzania serwerowym portfelem</description>

	<properties>
		<java.version>1.8</java.version>
		<pluginName>Portfel</pluginName>
		<author>szumielxd</author>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<bukkitMainClass>me.szumielxd.portfel.bukkit.PortfelBukkit</bukkitMainClass>
		<bungeeMainClass>me.szumielxd.portfel.bukkit.PortfelBungee</bungeeMainClass>
		<revision>3.0.0-SNAPSHOT</revision>
	</properties>

	<!-- Repositories -->
	<repositories>
		<repository>
			<id>spigot-repo</id>
			<url>https://hub.spigotmc.org/nexus/content/groups/public</url>
		</repository>
		<repository>
			<id>papermc</id>
			<url>https://papermc.io/repo/repository/maven-public/</url>
		</repository>
		<repository>
			<id>sonatype-oss-snapshots</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
		</repository>
		<repository>
			<id>mvdw-software</id>
			<name>MVdW Public Repositories</name>
			<url>http://repo.mvdw-software.be/content/groups/public/</url>
		</repository>
		<repository>
			<id>placeholderapi</id>
			<url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<!-- License -->
	<licenses>
		<license>
			<name>GPL2</name>
			<url>http://www.gnu.org/licenses/gpl-2.0.html</url>
		</license>
	</licenses>
	
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>portfelx-logging</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>portfelx-common</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>portfelx-api</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>portfelx-bungee</artifactId>
				<version>${project.version}</version>
			</dependency>
			<dependency>
				<groupId>${project.groupId}</groupId>
				<artifactId>portfelx-bukkit</artifactId>
				<version>${project.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<!-- Dependencies -->
	<dependencies>
		<dependency>
			<groupId>com.zaxxer</groupId>
			<artifactId>HikariCP</artifactId>
			<version>5.0.0</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.7</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>net.md-5</groupId>
			<artifactId>bungeecord-chat</artifactId>
			<version>1.17-R0.1-SNAPSHOT</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>me.carleslc.Simple-YAML</groupId>
			<artifactId>Simple-Yaml</artifactId>
			<version>1.7.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jetbrains</groupId>
			<artifactId>annotations</artifactId>
			<version>21.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-platform-bungeecord</artifactId>
			<version>4.0.0-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.jetbrains</groupId>
					<artifactId>annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.checkerframework</groupId>
					<artifactId>checker-qual</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>net.kyori</groupId>
			<artifactId>adventure-platform-bukkit</artifactId>
			<version>4.0.0-SNAPSHOT</version>
			<type>jar</type>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<groupId>org.jetbrains</groupId>
					<artifactId>annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.checkerframework</groupId>
					<artifactId>checker-qual</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<!-- Build -->
	<build>
		<defaultGoal>clean package</defaultGoal>
		<finalName>${project.name}-${project.version}</finalName>

		<pluginManagement>
			<plugins>
				<!-- Compile plugin -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>
						<showDeprecation>true</showDeprecation>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<!-- NotNull plugin -->
			<!--plugin>
				<groupId>se.eris</groupId>
				<artifactId>notnull-instrumenter-maven-plugin</artifactId>
				<version>1.0.0</version>
				<executions>
					<execution>
						<id>instrument</id>
						<goals>
							<goal>instrument</goal>
							<goal>tests-instrument</goal>
						</goals>
					</execution>
				</executions>
			</plugin-->
		</plugins>
	</build>

	<modules>
		<module>portfelx-bukkit</module>
		<module>portfelx-bungee</module>
		<module>portfelx-common</module>
		<module>portfelx-api</module>
		<module>portfelx-assembly</module>
	</modules>
</project>
